--- a/package.json
+++ b/package.json
@@ -11,13 +11,34 @@
     "lib"
   ],
   "scripts": {
-    "test": "standard"
+    "test": "standard",
+    "test:integration:docker": "./pouchdb/bin/run-couchdb-on-travis.sh",
+    "test:integration:1": "COUCH_HOST=http://127.0.0.1:3000 mocha --timeout 5000 -r jsdom-global/register -r tests/setup.js pouchdb/tests/integration/test.*.js",
+    "test:integration": "COUCH_HOST=http://127.0.0.1:3000 mocha --timeout 5000 --grep 'js-local(?!-http)' -r jsdom-global/register -r tests/setup.js pouchdb/tests/integration/test.taskqueue.js"
   },
   "dependencies": {
     "pouchdb-adapter-websql-core": "6.1.0",
     "pouchdb-utils": "6.1.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "jsdom": "^9.9.1",
+    "jsdom-global": "^2.1.1",
+    "mocha": "^3.2.0",
+    "pouchdb-adapter-http": "^6.1.1",
+    "pouchdb-core": "^6.1.1",
+    "pouchdb-mapreduce": "^6.1.1",
+    "pouchdb-replication": "^6.1.1",
+    "react": "^15.4.1",
+    "react-native": "^0.40.0",
+    "react-native-mock": "^0.2.9",
+    "react-native-sqlite-storage": "^3.1.2",
     "standard": "^7.1.2"
+  },
+  "standard": {
+    "ignore": [
+      "pouchdb/**"
+    ]
   }
 }
