--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pouchdb-adapter-react-native-sqlite",
-  "version": "4.0.0-rc.3",
+  "version": "4.0.4",
   "description": "PouchDB adapter for React Native SQLite",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -78,7 +78,7 @@
     "@types/react": "^18.2.44"
   },
   "dependencies": {
-    "@op-engineering/op-sqlite": "^6.0.7",
+    "@op-engineering/op-sqlite": "^6.2.11",
     "debug": "^4.3.5",
     "pouchdb-adapter-utils": "^8.0.1",
     "pouchdb-binary-utils": "^8.0.1",
@@ -88,7 +88,6 @@
     "pouchdb-utils": "^8.0.1"
   },
   "peerDependencies": {
-    "@op-engineering/op-sqlite": "^6.0.7",
     "react": "*",
     "react-native": "*"
   },
