--- a/example/package.json
+++ b/example/package.json
@@ -10,22 +10,22 @@
   },
   "dependencies": {
     "@craftzdog/react-native-buffer": "^6.0.5",
-    "@op-engineering/op-sqlite": "^6.2.11",
+    "@op-engineering/op-sqlite": "^11.0.2",
     "debug": "^4.3.5",
-    "expo": "~51.0.14",
-    "expo-build-properties": "~0.12.3",
-    "expo-status-bar": "~1.12.1",
+    "expo": "~52.0.11",
+    "expo-build-properties": "~0.13.1",
+    "expo-status-bar": "~2.0.0",
     "pouchdb-adapter-http": "^8.0.1",
     "pouchdb-core": "^8.0.1",
     "pouchdb-mapreduce": "^8.0.1",
     "pouchdb-replication": "^8.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-quick-crypto": "0.7.0-rc.10"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-quick-crypto": "0.7.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
     "@expo/webpack-config": "^18.0.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^5.0.2"
