--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pouchdb-adapter-react-native-sqlite",
-  "version": "4.0.5",
+  "version": "4.1.0-beta.0",
   "description": "PouchDB adapter for React Native SQLite",
   "source": "./src/index.ts",
   "main": "./lib/commonjs/index.js",
