--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@types/react": "^18.2.44",
     "commitlint": "^17.0.2",
     "del-cli": "^5.1.0",
-    "eslint": "^8.51.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
@@ -144,6 +144,8 @@
       "prettier"
     ],
     "rules": {
+      "@typescript-eslint/no-shadow": "off",
+      "react-native/no-inline-styles": "off",
       "react/react-in-jsx-scope": "off",
       "prettier/prettier": [
         "error",
