fix(example): use dotenv for replications

--- a/example/package.json
+++ b/example/package.json
@@ -32,7 +32,8 @@
     "@react-native/eslint-config": "0.79.2",
     "@react-native/metro-config": "0.79.2",
     "@react-native/typescript-config": "0.79.2",
-    "react-native-builder-bob": "^0.35.2"
+    "react-native-builder-bob": "^0.35.2",
+    "react-native-dotenv": "^3.4.11"
   },
   "op-sqlite": {
     "fts5": true
