--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@craftzdog/pouchdb-errors": "^9.0.1",
-    "@op-engineering/op-sqlite": "^12.0.2",
+    "@op-engineering/op-sqlite": "15.0.7",
     "debug": "^4.4.0",
     "pouchdb-adapter-http": "^9.0.0",
     "pouchdb-core": "^9.0.0",
