--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@op-engineering/op-sqlite": "^12.0.2",
+    "@op-engineering/op-sqlite": "15.0.7",
     "debug": "^4.4.0",
     "events": "^3.3.0",
     "pouchdb-adapter-utils": "^9.0.0",
